--- a/Puntaje negativo - Charla.qmd
+++ b/Puntaje negativo - Charla.qmd
@@ -1,43 +1,54 @@
 ---
-title: "Penalizar respuestas incorrectas?"
+title: "Penalizar respuestas incorrectas"
 author: "Alberto Torreblanca"
+title-slide-attributes: 
+  data-background-image: "./standardized test.jpg"
+  data-background-size: contain
+  data-background-opacity: "0.5"
 format: 
   revealjs:
+    logo: "./Nuevo_logo_pucp_blanco.png"
     theme: dark
+    transition: fade
+    slide-number: true
+    preview-links: true
+    controls: true
+    touch: false
+    chalkboard: true
 ---
 
 ## Penalización en admisión
 
-1.  Evaluaciones previas al 2009 se penalizan las respuestas incorrectas
+1.  Evaluaciones de admisión previas al 2009, se penalizan las respuestas incorrectas
 
-    -   4 puntos correcta y menos un punto incorrecta
-    -   Se estandarizaban los puntajes y se escalaba
-    -   El puntajes total era la suma de los parciales
-    -   5 alternativas de respuesta
+- 4 puntos correcta y menos un punto incorrecta
+- Se estandarizaban los puntajes y se escalaba
+- El puntajes total era la suma de los parciales
+- 5 alternativas de respuesta
 
-------------------------------------------------------------------------
+---
 
 ## Penalización en admisión
 
-2.  A partir del 2009 se inicia un nuevo sistema de evaluaciones
+2.  A partir del 2009 se inicia un nuevo **Sistema de Evaluaciones**
 
-    -   Se elaboran escalas para cada una de las áreas evaluadas
-    -   Se utiliza para la medición RMT (Teoría de Medición de Rasch)
-    -   Por cada tres ítems erróneos se restaba un punto
-    -   4 alternativas de respuesta
+- Se elaboran escalas para cada una de las áreas evaluadas
+- Se utiliza para la medición la Teoría de Medición de Rasch (RMT)
+- Por cada tres ítems erróneos se restaba un punto
+- 4 alternativas de respuesta
 
-------------------------------------------------------------------------
+---
 
 ## Problemas de la penalización
 
--   Errores no deseados desde el punto de vista de la medición
-    -   Al restar puntos su medida en la escala de logits cambia
-    -   Medida asociada al número de respuestas correctas.
-    -   Evaluación diagnóstica errónea
--   Debido a la naturaleza de algunos ítems, problemas de precisión en la medición
-    -   La utilización de *distractores* lleva a cometer errores
+- Errores no deseados desde el punto de vista de la medición
+  - Al restar puntos su medida en la escala de logits cambia
+  - Medida asociada al número de respuestas correctas.
+  - Evaluación diagnóstica errónea
+- Debido a la naturaleza de algunos ítems, problemas de precisión en la medición
+  - La utilización de *distractores* lleva a cometer errores
 
-------------------------------------------------------------------------
+---
 
 ## Ejemplos de distribuciones de puntajes
 
@@ -48,47 +59,47 @@ y <- rnorm(150, mean = 75, sd = 10)
 
 # Plot the distribution
 hist(x, breaks = 20, main = "Puntajes de una evaluación", xlab = "Puntajes",
-     ylab = "Examinados")
+   ylab = "Examinados")
 
 ```
 
-------------------------------------------------------------------------
+---
 
 ## Ejemplos de distribuciones de puntajes
 
 ```{r}
 
 hist(x, breaks = 20, main = "Puntajes de una evaluación", xlab = "Puntajes",
-     ylab = "Examinados")
+   ylab = "Examinados")
 hist(x[x>=60], breaks = 10, col = "green", add = TRUE)
 
 ```
 
-------------------------------------------------------------------------
+---
 
 ## Algunas caracterśitcas de la admisión
 
--   Se desea mayor precisión en los admitidos, especialmente en los que pelean vacantes
--   La selección de los ítems y elaboración tienen estas consideraciones
+- Se desea mayor precisión en los admitidos, especialmente en los que pelean vacantes
+- La selección de los ítems y elaboración tienen estas consideraciones
+- Los examinados de la cola no son interesantes para la evaluación
 
-------------------------------------------------------------------------
+---
 
 ## El problema de la adivinación
 
--   El adivinar puede dar la admisión
--   Los examinados que hábiles, adivinación informada.
--   Los examinados que no hábiles, azar.
+- El adivinar puede dar la admisión
+- Los examinados que hábiles, adivinación informada.
+- Los examinados que no hábiles, azar.
 
-------------------------------------------------------------------------
+---
 
 ## Se perjudican los mejores
 
-![Puntajes a Escala](figura1.png){fig-align="center" width="640"}
+![Puntajes VS Escala](figura1.png){fig-align="center" width="640"}
 
 ---
 
 ## Probabilidad de acertar por azar {.smaller}
-
 
 |Número de preguntas acertadas por azar|Número de patrones de respuesta posibles|Probabilidad|
 |---|---|---|
