--- a/Puntaje negativo - Charla.qmd
+++ b/Puntaje negativo - Charla.qmd
@@ -8,6 +8,7 @@ title-slide-attributes:
 format: 
   revealjs:
     logo: "./Nuevo_logo_pucp_blanco.png"
+    footer: alberto.torreblanca@pucp.edu.pe
     theme: dark
     transition: fade
     slide-number: true
@@ -81,15 +82,16 @@ hist(x[x>=60], breaks = 10, col = "green", add = TRUE)
 
 - Se desea mayor precisión en los admitidos, especialmente en los que pelean vacantes
 - La selección de los ítems y elaboración tienen estas consideraciones
-- Los examinados de la cola no son interesantes para la evaluación
+- Mayor información en donde se pelean las vacantes para la admisión
+- Los examinados de la cola no son interesantes para las evaluación de admisión
 
 ---
 
 ## El problema de la adivinación
 
 - El adivinar puede dar la admisión
-- Los examinados que hábiles, adivinación informada.
-- Los examinados que no hábiles, azar.
+- Los examinados hábiles, adivinación informada.
+- Los examinados no hábiles, azar.
 
 ---
 
@@ -115,4 +117,83 @@ hist(x[x>=60], breaks = 10, col = "green", add = TRUE)
 |10|1048576|0,000%|
 
 ---
+
+## Información donde se estudia la adivinación
+
+- Se combina las tablas de alternativas de los ítems
+  - CTT
+  - RMT
+- Patrones de respuestas de los examinados
+- Indicadores de ajuste externo de los examinados
+
+---
+
+## Ejemplos de tablas {.smaller}
+
+| Alternativa | N   | Prop | pBis  | Discr. | Bajo | Med50 | Med75 | Altos |
+|:------------|:----|:-----|:------|:-------|:-----|:------|:------|:------|
+| _           |  71 | 0.11 | -0.16 |  -0.09 | 0.18 |  0.06 |  0.09 |   0.1 |
+| **A**       | 160 | 0.25 |  0.11 |   0.14 |  0.2 |   0.2 |  0.28 |  0.34 |
+| B           | 185 | 0.29 | -0.14 |  -0.08 | 0.34 |  0.32 |  0.25 |  0.25 |
+| C           | 151 | 0.24 | -0.03 |   0.06 | 0.17 |  0.29 |  0.27 |  0.23 |
+| D           |  70 | 0.11 | -0.07 |  -0.03 | 0.12 |  0.13 |   0.1 |  0.09 |  
+
+## Ejemplo de tablas {.smaller}
+
+| Alternativa | N   | Por % | Media | SD Mean | SE Mean | Interno | Externo | Corre. |
+|:------------|:----|:------|:------|:--------|:--------|:--------|:--------|:-------|
+| **A**       | 155 | 25.20 |  0.21 |    1.06 |    0.09 |    1.25 |    1.30 |   0.18 |
+| B           | 180 | 29.27 | -0.18 |    0.80 |    0.06 |    1.12 |    1.09 |  -0.07 |
+| C           | 145 | 23.58 | -0.04 |    0.79 |    0.07 |    1.20 |    1.23 |   0.02 |
+| D           |  69 | 11.22 | -0.14 |    0.77 |    0.09 |    1.12 |    1.12 |  -0.03 |
+| _           |  66 | 10.73 | -0.46 |    0.89 |    0.11 |    0.97 |    0.87 |  -0.15 |  
+
+
+## Matriz de respuestas {.scrollable}
+
+```
+         |Item
+         |  1   22 41323333111444123334  221 3412124344122
+MEASURE  |724365288229001470310389763211413898664597545765 Examinado 
+      high------------------------------------------------
+   -.79  |.................................1..1.........1. 323 00323
+   -.79  |.................................1......1.....1. 387 00388
+   -.79 E|0...............................1..111...1....11 415 00416
+   -.79  |...............................111......1.....1. 416 00417
+   -.91 R|0.....................................1..1.1..1. 426 00427
+  -1.03 G|0........................1.1....11111....1....1. 132 00132
+  -1.03 H|0...........................11.....1.1....11..1. 577 00579
+  -1.03  |..........................1................1...1 579 00581
+  -1.16 I|0.........................11.....1......1.1...1. 246 00246
+  -1.16  |..........................1.1...........1.1...1. 252 00252
+  -1.16  |......................1.......................1. 304 00304
+  -1.16  |...............................1...1....1....1.. 319 00319
+  -1.16  |...........................1...1...........1..1. 543 00545
+  -1.16  |...........................1...........11.....1. 545 00547
+  -1.30 O|...........................11......11.........1. 109 00109
+  -1.44  |0...................11...............1.......1..  10 00010
+  -1.44 F|0..................11................1.1..1...1. 125 00125
+  -1.44  |...........................1......11....1...1... 386 00387
+  -1.44 V|...................11........1......1....1...1.. 508 00510
+  -1.60  |.................1..1.1..........1.......1...... 104 00104
+  -1.60  |......................1...1.....1........1.1.... 501 00503
+  -1.77  |.................11...........1..............1.. 135 00135
+  -1.77  |...............1................1.....1...1..... 274 00274
+  -1.77  |...............1...........1..11..........1..... 293 00293
+  -1.77  |..................1..............1.........1.... 459 00460
+  -1.77  |..............11..........1.........1...1....... 536 00538
+  -1.95 B|..............1......1.............11.11.1...... 118 00118
+  -2.16  |........1........11...............1.............  99 00099
+  -2.16  |.............1...............1.........1........ 157 00157
+  -2.16  |.........1.1........1..............1.1.......... 550 00552
+         |------------------------------------------------low
+         |721365228413233331114441233341422193412124344122
+         |  4   28 22900147031038976321  138 8664597545765
+```
+
+## ¡GRACIAS! {.center}
+
+**Telegram:** @AlbertoTorreblanca
+
+**Twitter:** @AlbrTorreblanca
 
